// Skynet 会话服务协议
// 处理玩家登录、登出、状态等会话管理

syntax = "proto3";
package skynet_proto;

import "skynet_common.proto";

// ==================== 消息类型 (1-99, 101-199) ====================

// 进入游戏请求 (type = 1)
message EnterGameRequest {
    string player_id = 1;
    string token = 2;
    string client_version = 3;
    string device_info = 4;
}

// 进入游戏响应 (type = 101)
message EnterGameResponse {
    bool success = 1;
    string message = 2;
    PlayerData player_data = 3;
    int64 server_time = 4;
}

// 离开游戏请求 (type = 2)
message LeaveGameRequest {
    string player_id = 1;
    string reason = 2;  // logout, disconnect, timeout, kicked
}

// 离开游戏响应 (type = 102)
message LeaveGameResponse {
    bool success = 1;
    string message = 2;
}

// 玩家操作请求 (type = 3)
message PlayerActionRequest {
    string player_id = 1;
    string action_type = 2;
    bytes action_data = 3;
}

// 玩家操作响应 (type = 103)
message PlayerActionResponse {
    bool success = 1;
    string message = 2;
    bytes result_data = 3;
    repeated Achievement unlocked_achievements = 4;
}

// 获取玩家状态请求 (type = 4)
message GetPlayerStatusRequest {
    string player_id = 1;
}

// 获取玩家状态响应 (type = 104)
message GetPlayerStatusResponse {
    bool success = 1;
    PlayerData player_data = 2;
}

// 心跳请求 (type = 5)
message HeartbeatRequest {
    string player_id = 1;
    int64 client_time = 2;
}

// 心跳响应 (type = 105)
message HeartbeatResponse {
    bool success = 1;
    int64 server_time = 2;
}

// ==================== 推送消息 (200-299) ====================

// 推送游戏状态 (type = 200)
message PushGameState {
    string player_id = 1;
    string state_type = 2;
    bytes state_data = 3;
}

// 推送通知 (type = 201)
message PushNotification {
    string player_id = 1;
    string notification_type = 2;
    string title = 3;
    string content = 4;
    map<string, string> extra_data = 5;
}

// 推送成就解锁 (type = 202)
message PushAchievement {
    string player_id = 1;
    Achievement achievement = 2;
}

// 推送踢出消息 (type = 203)
message PushKick {
    string player_id = 1;
    string reason = 2;
}
